// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders Select with width auto correctly: enzyme.shallow 1`] = `
<SelectContainerStyles
  defaultOpen={false}
  placeholder="Select..."
  width="auto"
>
  <SelectStyles
    defaultOpen={false}
    onClick={[Function]}
    placeholder="Select..."
    width="auto"
  >
    <SelectContent>
      Select...
    </SelectContent>
    <Icon
      color="#444"
      icon="ChevronSvg"
    />
  </SelectStyles>
</SelectContainerStyles>
`;

exports[`renders Select with width stretched correctly: enzyme.shallow 1`] = `
<SelectContainerStyles
  defaultOpen={false}
  placeholder="Select..."
  width="stretched"
>
  <SelectStyles
    defaultOpen={false}
    onClick={[Function]}
    placeholder="Select..."
    width="stretched"
  >
    <SelectContent>
      Select...
    </SelectContent>
    <Icon
      color="#444"
      icon="ChevronSvg"
    />
  </SelectStyles>
</SelectContainerStyles>
`;
